--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,6 @@ services:
     ports:
       - "80:80"
     volumes:
-      - apache_conf:/usr/local/apache2/conf/
+      - ./apache/conf:/usr/local/apache2/conf/
       - ./www:/usr/local/apache2/htdocs/
 
-volumes:
-  apache_conf:
-    driver: local
-    driver_opts:
-      type: none
-      device: ./apache/conf
-      o: bind
