--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,13 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./apache/conf:/usr/local/apache2/conf/
+      - apache_conf:/usr/local/apache2/conf/
       - ./www:/usr/local/apache2/htdocs/
-
+      
+volumes:
+  apache_conf:
+    driver: local
+    driver_opts:
+      type: none
+      device: ./apache/conf
+      o: bind
